@@ -232,8 +232,11 @@
       without changing functionality, thanks to proposals from Peter
       Haverty and Suharto Anggono.  (\PR{16640})
 
-      \item \code{match.arg(arg)} (the one-argument case) is faster.
-      (\PR{16640})
+      \item \code{match.arg(arg)} (the one-argument case) is faster; so
+      is \code{sort.int()}.  (\PR{16640})
+
+      \item The \code{format} method for \code{object_size} objects now
+      also accepts \dQuote{binary} units (and e.g. Tb).  (\PR{16649})
     }
   }
 
